--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/virtualenv
 /node_modules
 /.pnp
 .pnp.js
